# omniprobe

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.agents/: kt_overview.md  kt_usage.md  kt_workflows.md  project.json
cmake_modules/: add_instrumentation_plugins.cmake  env.cmake  ext_proj_add.cmake  fetch.cmake  utils.cmake
containers/: .dockerignore  build-container.sh  build.sh  omniprobe.Dockerfile  omniprobe.def  run-container.sh  run.sh  toolchain.Dockerfile  toolchain.def  triton_install.sh
docker/: logduration.Dockerfile  logduration.def
docs/: amdgpu-backend-architecture-plan.md  amdgpu-entry-abi-tracking-plan.md  binary-instrumentation-whitepaper.md  binary-only-probe-instrumentation-plan.md  binary-probe-descriptor-audit.md  building-from-source.md  container-usage.md  dispatch-uniform-builtin-snapshot-plan.md  donor-free-codeobj-regeneration-plan.md  donor-slot-debug-handoff-2026-04-15.md  entry-snapshot-trampoline-design.md  heavyweight-binary-helper-abi-plan.md  hip-instrumentation.md  hsaco-instrumentation-architecture.md  rocblas-maximal-instrumentation.md  triton-instrumentation.md  usage.md
inc/: basic_block_analysis.h  comms_mgr.h  hsa_mem_mgr.h  interceptor.h  json_helpers.h  json_output.h  kdb_message_handler_base.h  library_filter.h  memory_analysis_handler.h  memory_analysis_wrapper.h  memory_heatmap.h  message_logger.h  numa_mem_mgr.h  omniprobe_probe_abi_v1.h  pyHandler.h  time_interval_handler.h  time_interval_handler_wrapper.h  utils.h
omniprobe/: omniprobe
plugins/: CMakeLists.txt  basic_block_plugin.cc  logger_plugin.cc  memory_analysis_plugin.cc  plugin.cc  plugin.h
src/: CMakeLists.txt  basic_block_analysis.cc  comms_mgr.cc  config_receiver.cc  hsa_mem_mgr.cc  interceptor.cc  json_helpers.cc  library_filter.cc  memory_analysis_handler.cc  memory_analysis_wrapper.cc  memory_heatmap.cc  message_logger.cc  numa_mem_mgr.cc  pyHandler.cc  reconfigure.cc  time_interval_handler.cc  time_interval_handler_wrapper.cc  timehelper.h  utils.cc
tests/: CMakeLists.txt  handler_integration_test.cc  run_abi_changing_entry_trampoline_smoke_tests.sh  run_all_tests.sh  run_amdgpu_calling_convention_tests.sh  run_amdgpu_entry_abi_tests.sh  run_audit_entry_abi_classes_tests.sh  run_audit_entry_abi_tree_tests.sh  run_basic_tests.sh  run_binary_probe_basic_block_counter_tests.sh  run_binary_probe_basic_block_dh_comms_tests.sh  run_binary_probe_basic_block_runtime_smoke_tests.sh  run_binary_probe_cache_prepare_tests.sh  run_binary_probe_entry_dh_comms_tests.sh  run_binary_probe_entry_runtime_smoke_tests.sh  run_binary_probe_injector_tests.sh  run_binary_probe_kernel_exit_summary_tests.sh  run_binary_probe_memory_op_address_space_tests.sh  run_binary_probe_memory_op_dh_comms_tests.sh  run_binary_probe_planning_tests.sh  run_binary_probe_runtime_smoke_tests.sh  run_binary_probe_support_abi_guard_tests.sh  run_binary_probe_support_compile_tests.sh  run_block_filter_tests.sh  run_codeobj_external_regen_tests.sh  run_codeobj_rocprim_breadth_tests.sh  run_codeobj_roundtrip_tests.sh  run_dynamic_lds_tests.sh  run_emit_amdhsa_asm_dialect_tests.sh  run_entry_handoff_recipe_tests.sh  run_entry_handoff_stub_tests.sh  run_entry_resume_matrix_tests.sh  run_entry_trampoline_descriptor_plan_tests.sh  run_entry_wrapper_full_entry_abi_capture_restore_proof_tests.sh  run_entry_wrapper_hidden_handoff_proof_tests.sh  run_entry_wrapper_implemented_class_tests.sh  run_entry_wrapper_kernarg_restore_proof_tests.sh  run_entry_wrapper_proof_tests.sh  run_entry_wrapper_system_sgpr_capture_restore_proof_tests.sh  run_entry_wrapper_unimplemented_class_tests.sh  (+19 more)
tests/hipblaslt/: include_hipblaslt_transform.json  run_test.sh  test_hipblaslt_transform.cpp
tests/library_filter_chain/: CMakeLists.txt  app.cpp  hip_test_utils.h  lib_dynamic_head.h  lib_dynamic_head.hip  lib_dynamic_mid.h  lib_dynamic_mid.hip  lib_dynamic_tail.h  lib_dynamic_tail.hip  lib_static_head.h  lib_static_head.hip  lib_static_mid.h  lib_static_mid.hip  lib_static_tail.h  lib_static_tail.hip  run_test.sh
tests/library_filter_chain/test_output/: exclude_static.json  include_dynamic_head.json  include_dynamic_with_deps.json
tests/probe_specs/: basic_block_binary_minimal_v1.yaml  basic_block_timing_v1.yaml  call_trace_v1.yaml  invalid_contract.yaml  kernel_timing_v1.yaml  memory_trace_v1.yaml  valid_v1.yaml
tests/probe_specs/fixtures/: amdgpu_callconv_descriptor.manifest.json  amdgpu_callconv_gfx1030.ir.json  amdgpu_callconv_gfx90a.ir.json  amdgpu_callconv_gfx942.ir.json  amdgpu_entry_abi_gfx1030.ir.json  amdgpu_entry_abi_gfx1030.manifest.json  amdgpu_entry_abi_gfx90a.ir.json  amdgpu_entry_abi_gfx90a.manifest.json  amdgpu_entry_abi_gfx90a_mi210_direct.ir.json  amdgpu_entry_abi_gfx90a_mi210_direct.manifest.json  amdgpu_entry_abi_gfx942.ir.json  amdgpu_entry_abi_gfx942.manifest.json  amdgpu_entry_abi_gfx942_real_mlk_xyz.ir.json  amdgpu_entry_abi_gfx942_real_mlk_xyz.manifest.json  amdgpu_entry_abi_gfx942_real_single_vgpr.ir.json  amdgpu_entry_abi_gfx942_real_single_vgpr.manifest.json  binary_probe_manifest.json  binary_probe_sites.ir.json
tests/probe_specs/helpers/: basic_block_binary_minimal.hip  basic_block_timing.hip  call_trace.hip  kernel_timing.hip  memory_trace.hip
tests/rocblas_filter/: exclude_rocblas.json  include_all_ss_hsaco.json  include_sgemm_tensile.json  include_tensile.json  run_test.sh  test_rocblas_gemm.cpp  test_rocblas_scal.cpp
tests/rocblas_hipblaslt/: run_test.sh
tests/rocblas_offload_compression/: run_test.sh
tests/test_kernels/: CMakeLists.txt  bank_conflict_test.cpp  block_filter_test.cpp  dual_kernel_test.cpp  dynamic_lds_test.cpp  hip_test_utils.h  module_load_donor_slot_kernel.hip  module_load_kernel.hip  module_load_manual_carrier_kernel.hip  module_load_test.cpp  scope_filter_test.cpp  simple_heatmap_test.cpp  simple_memory_analysis_test.cpp  sub8b_args_test.cpp
tests/test_output/: heatmap_basic.out  heatmap_page_accesses.out  memory_analysis_cache_lines.out  multiple_handlers.out
tests/triton/: run_test.sh  vector_add.py
(+271 files in other folders)
